style.css
/* General */

.container {
  width: 960px;
}


/* Header */
.header {
  background-color: white;
  border-bottom: 1px solid #ddd;
  
  font-family: 'Oswald', sans-serif;
  font-weight: 300;
  
  font-size: 22px;
  padding: 15px;
}


/* Menu */ 
.header .Lmenu {
  float: left;
  list-style: none;
  margin-top: 0px;
}

.Lmenu > li {
  display: inline;
  padding-left: 0px;
  padding-right: 20px;
}

.Lmenu a {
  color: blue;
}

.logo-icon img {
  height: 80px;
}

.header .menu {
  float: right;
  list-style: none;
  margin-top: 20px;
}

.menu > li {
  display: inline;
  padding-left: 20px;
  padding-right: 20px;
}

.menu a {
  color: #898989;
}

/* Dropdown */

.dropdown-menu {
  font-size: 16px;
  margin-top: 5px;
  min-width: 105px;
}

.dropdown-menu li a {
  color: #898989;
  padding: 6px 20px;
  font-weight: 300;
}


/* Carousel */

.slider {
  position: relative;
  width: 100%;
  height: 470px;
  border-bottom: 1px solid #ddd;
}

.slide {
  background: transparent url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/feature-gradient-transparent.png') center center no-repeat;
  background-size: cover;
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.active-slide {
    display: block;
}

.slide-copy h1 {
  color: #363636;  
  
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
  
  font-size: 40px;
  margin-top: 105px;
  margin-bottom: 0px;
}

.slide-copy h2 {
  color: #b7b7b7;
  
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
  
  font-size: 40px;
  margin: 5px;
}

.slide-copy p {
  color: #959595;
  font-family: Georgia, "Times New Roman", serif;
  font-size: 1.15em;
  line-height: 1.75em;
  margin-bottom: 15px;
  margin-top: 16px;
}

.slide-img {
  text-align: right;
}

.slide-img img{
  margin-top: 50px;
  margin-bottom: 0px;
  margin-right: 10px;
}

/* Slide feature */

.slide-feature {
  text-align: center;
  background-image: url('design.jpg');
  height: 470px;
}

.slide-feature img {
  margin-top: 112px;
  margin-bottom: 28px;
}

.slide-feature a {
  display: block;
  color: red;
  
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 600;
  
  font-size: 45px;
  margin-top: 125px;
}

/* Slide feature 2*/

.slide-feature2 {
  text-align: center;
  background-image: url('talk.jpeg');
  height: 470px;
}

.slide-feature2 img {
  margin-top: 112px;
  margin-bottom: 28px;
}

.slide-feature2 a {
  display: block;
  color: black;
  
  font-family: "Comic Sans MS", cursive, sans-serif;
  font-weight: 600;
  
  font-size: 45px;
  margin-top: 125px;
}

/* slider navigation */

.slider-nav {
  text-align: center;
  margin-top: 20px;
}

.arrow-prev {
  margin-right: 45px;
  display: inline-block;
  vertical-align: top;
  margin-top: 9px;
}

.arrow-next {
  margin-left: 45px;
  display: inline-block;
  vertical-align: top;
  margin-top: 9px;
}

.slider-dots {
  list-style: none;
  display: inline-block;
  padding-left: 0;
  margin-bottom: 0;
}

.slider-dots li {
  color: #bbbcbc;
  display: inline;
  font-size: 30px;
  margin-right: 5px;
}

.slider-dots li.active-dot {
  color: #363636;
}

/* neighboring pictures */

.neighborhood-guides{
    background-color: white;
    border-bottom: 1px solid #dbdbdb;
}

.neighborhood-guides h2{
    color: #393c3d;
    font-size: 24px;
}

.neighborhood-guides p{
    font-size: 15px;
    margin-bottom: 13px; 
}

/* footer */ 
.footer{
  background-color: #f7f7f7;
}

.footer img {
  width: 75px;
  height: 45px;
  margin-top: 10px;
  margin-bottom: 5px;
  margin-right: 10px;
}

